ajout des services et interfaces pour equipes tournois et evenements + introduction de routes (pas finis)

--- a/TuttiTourney/src/app/app.component.html
+++ b/TuttiTourney/src/app/app.component.html
@@ -12,8 +12,7 @@
 
 <h1>Tutti Tourney</h1>
 <h3>Bienvenue sur notre site de création de tournoi sportif !</h3>
-
-<app-create-evenement></app-create-evenement>
+<router-outlet></router-outlet>
 
 </body>
 </html>
