--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <a class="home" href="">Home</a>
-  <a href="">Créer un tournoi</a>
+  <a href="/create-tournois">Créer un tournoi</a>
   <a class="member" href="">Connexion</a>
   <a class="member" href="">Inscription</a>
 </nav>
