ajout creation tournoi et equipe (indépendant pour l'instant) page d'accueil montre les evenements créés et un peu de css mais pas bcp

--- a/TuttiTourney/src/app/app.component.html
+++ b/TuttiTourney/src/app/app.component.html
@@ -10,8 +10,8 @@
 
 <app-navbar></app-navbar>
 
-<h1>Tutti Tourney</h1>
-<h3>Bienvenue sur notre site de création de tournoi sportif !</h3>
+<!-- <h1>Tutti Tourney</h1>
+<h3>Bienvenue sur notre site de création de tournoi sportif !</h3> -->
 <router-outlet></router-outlet>
 
 </body>
