--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -1,6 +1,12 @@
 <nav>
-  <a class="home" href="">Home</a>
-  <a href="/create-tournois">Créer un tournoi</a>
-  <a class="member" href="">Connexion</a>
-  <a class="member" href="">Inscription</a>
+  <div class="right">
+    <a class="home" href="">TUTTI TOURNEY</a>
+  </div>
+  <div class="left">
+    <a href="/create-event">Créer un événement</a>
+    <a href="/create-tournoi">Créer un tournoi</a>
+    <a href="/create-equipe">Créer une equipe</a>
+    <a class="member" href="">Connexion</a>
+    <a class="member" href="">Inscription</a>
+  </div>
 </nav>
