--- a/TuttiTourney/src/app/create-evenement/create-evenement.component.html
+++ b/TuttiTourney/src/app/create-evenement/create-evenement.component.html
@@ -1,24 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Création evenement</title>
-</head>
-<body>
-<form (ngSubmit)="onSubmit()">
-  <p> Nom de l'événement : <input type="text" name="nom" [(ngModel)]="newEvenement.nom"></p>
-  <p> Date de l'événement : <input type="date" name="date" [(ngModel)]="newEvenement.date"></p>
-  <input type="submit" value="Créer événement">
-</form>
+ <div class="container">
+   <div class="create-evenement">
+      <form (ngSubmit)="onSubmit()">
+        <p> Nom de l'événement : <input type="text" name="nom" [(ngModel)]="newEvenement.nom"></p>
+        <p> Date de l'événement : <input type="date" name="date" [(ngModel)]="newEvenement.date"></p>
+        <input type="submit" value="Créer événement">
+      </form>
 
-<ul *ngFor="let event of events">
-  <li>{{event.nom}}</li>
-  <li>{{event.date | date: 'd MMMM yyyy'}}</li>
-</ul>
+      <!-- <button (click)="redirection()">Vers show Event</button> -->
+    </div>
+ </div>
 
-<button (click)="redirection()">Vers show Event</button>
-
-</body>
-</html>
