Afficher les tournois & css

--- a/TuttiTourney/src/app/create-equipe/create-equipe.component.scss
+++ b/TuttiTourney/src/app/create-equipe/create-equipe.component.scss
@@ -10,6 +10,6 @@
   height: 300px;
   background-color: #e09f7d;
   padding-left: 1em;
-  border-radius: 10%;
+  border-radius: 25px;
   overflow: hidden;
 }
