--- a/TuttiTourney/src/app/create-evenement/create-evenement.component.scss
+++ b/TuttiTourney/src/app/create-evenement/create-evenement.component.scss
@@ -4,12 +4,12 @@
   align-items: center;
 }
 
-.create-evenement{
+.create-evenement {
   margin-top: 10em;
   width: 460px;
   height: 300px;
   background-color: #e09f7d;
   padding-left: 1em;
-  border-radius: 10%;
+  border-radius: 25px;
   overflow: hidden;
 }
