rename de tout les 'event' en 'evenement' pour eviter confusion + ajout de niveau à equipe + changement dans la structure des interface et schema mongodb + on peut cliquer sur les evenements pour voir les tournois

--- a/TuttiTourney/src/app/create-equipe/create-equipe.component.html
+++ b/TuttiTourney/src/app/create-equipe/create-equipe.component.html
@@ -1,9 +1,17 @@
 <div class="container">
   <div class="create-equipe">
      <form (ngSubmit)="onSubmit()">
+      <p>
+        Nom du tournoi :
+        <select name="nomTournois" [(ngModel)]="newEquipe.tournoi">
+          <option *ngFor="let tournoi of tournois" [ngValue]="tournoi">{{ tournoi.evenement.nom }} -> {{ tournoi.nom }} </option>
+        </select>
+      </p>
        <p> Nom de l'équipe : <input type="text" name="nom" [(ngModel)]="newEquipe.nom"></p>
        <p> Nombre de joueur dans l'équipe : <input type="number" name="nbjoueur" [(ngModel)]="newEquipe.nbjoueur"></p>
+       <p> Niveau de l'équipe : <input type="text" name="niveau" [(ngModel)]="newEquipe.niveau"></p>
        <input type="submit" value="Créer une équipe">
      </form>
+
    </div>
 </div>
