--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a class="home" href="">TUTTI TOURNEY</a>
   </div>
   <div class="left">
-    <a href="/create-event">Créer un événement</a>
+    <a href="/create-evenement">Créer un événement</a>
     <a href="/create-tournoi">Créer un tournoi</a>
     <a href="/create-equipe">Créer une equipe</a>
     <a class="member" href="">Connexion</a>
