--- a/TuttiTourney/src/app/create-tournoi/create-tournoi.component.html
+++ b/TuttiTourney/src/app/create-tournoi/create-tournoi.component.html
@@ -3,8 +3,8 @@
      <form (ngSubmit)="onSubmit()">
       <p>
         Nom de l'evenement :
-        <select name="nomEvent" [(ngModel)]="nomEvenement">
-          <option *ngFor="let event of events" [ngValue]="event.nom">{{ event.nom }}</option>
+        <select name="nomEvent" [(ngModel)]="newTournoi.evenement">
+          <option *ngFor="let evenement of evenements" [ngValue]="evenement">{{ evenement.nom }}</option>
         </select>
       </p>
        <p> Nom du tournoi : <input type="text" name="nom" [(ngModel)]="newTournoi.nom"></p>
