--- a/TuttiTourney/src/styles.scss
+++ b/TuttiTourney/src/styles.scss
@@ -8,3 +8,27 @@ body {
   font-family: "Tenor Sans", sans-serif;
   font-size: 1rem;
 }
+
+input[type=text], input[type=number], input[type=date], select {
+  border-radius: 25px;
+  height: 20px;
+  padding: 5px;
+  border-style: none;
+}
+
+input[type=submit] {
+  border-radius: 25px;
+  height: 30px;
+  padding: 5px;
+  border-style: none;
+  font-size: 10px;
+}
+
+select {
+  border-radius: 25px;
+  height: 30px;
+  padding: 5px;
+  border-style: none;
+}
+
+
