--- a/TuttiTourney/src/app/create-equipe/create-equipe.component.scss
+++ b/TuttiTourney/src/app/create-equipe/create-equipe.component.scss
@@ -6,8 +6,8 @@
 
 .create-equipe{
   margin-top: 10em;
-  width: 460px;
-  height: 300px;
+  width: 40em;
+  height: auto;
   background-color: #e09f7d;
   padding-left: 1em;
   border-radius: 25px;
