--- a/TuttiTourney/src/app/show-evenements/show-evenements.component.html
+++ b/TuttiTourney/src/app/show-evenements/show-evenements.component.html
@@ -1,8 +1,9 @@
 
 <div class="container">
-  <div class="evenement" *ngFor="let evenement of evenements" (click)="redirection(evenement.nom)">
-    <h2> {{ evenement.nom }} </h2>
+  <div class="evenement" *ngFor="let evenement of evenements" (click)="redirection(evenement.nomEvenement)">
+    <h2> {{ evenement.nomEvenement }} </h2>
     <h3> {{ evenement.date | date: 'd MMMM yyyy' }} </h3>
+    <p> {{ evenement.description }} </p>
     <!-- <button (click)="redirection(evenement.nom)"> Voir les tournois</button> -->
   </div>
 </div>
