--- a/TuttiTourney/src/app/show-tournoi/show-tournoi.component.html
+++ b/TuttiTourney/src/app/show-tournoi/show-tournoi.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="tournoi" *ngFor="let tournoi of tournois" (click)="redirection()">
-    <h2> {{ tournoi.nom }} </h2>
+    <h2> {{ tournoi.nomTournoi }} </h2>
     <h3> {{ tournoi.sport }} </h3>
+    <p> {{ tournoi.description }} </p>
   </div>
 </div>
