--- a/TuttiTourney/src/app/show-poule/show-poule.component.scss
+++ b/TuttiTourney/src/app/show-poule/show-poule.component.scss
@@ -8,7 +8,7 @@
   border-radius: 10px;
 }
 
-.tournoi {
+.poule {
   width: 300px;
   height: 300px;
   background-color: #e09f7d;
@@ -20,6 +20,3 @@
   cursor: pointer;
 }
 
-h1{
-  color: white;
-}
