--- a/TuttiTourney/src/app/show-tournoi/show-tournoi.component.html
+++ b/TuttiTourney/src/app/show-tournoi/show-tournoi.component.html
@@ -1,10 +1,13 @@
+<h1> Tournoi dans l'evenement : {{nomEvenement}} </h1>
 <div class="container">
-  <div class="tournoi" *ngFor="let tournoi of tournois">
-    <h2> {{ tournoi.nomTournoi }} </h2>
-    <h3> {{ tournoi.sport }} </h3>
-    <p> {{ tournoi.description }} </p>
+  <ng-container *ngFor="let tournoi of tournois">
+    <div class="tournoi" *ngIf="tournoi.etat==0">
+      <h2> {{ tournoi.nomTournoi }} </h2>
+      <h3> {{ tournoi.sport }} </h3>
+      <p> {{ tournoi.description }} </p>
 
-    <button (click)="redirectionInscriptionEquipe(nomEvenement, tournoi.nomTournoi)"> Inscrire une équipe </button>
-    <button  (click)="redirectionOrganisation(nomEvenement, tournoi.nomTournoi)"> Organisation du tournoi </button>
-  </div>
+      <button (click)="redirectionInscriptionEquipe(nomEvenement, tournoi.nomTournoi)"> Inscrire une équipe </button>
+      <button  (click)="redirectionOrganisation(nomEvenement, tournoi.nomTournoi)"> Organisation du tournoi </button>
+    </div>
+  </ng-container>
 </div>
