--- a/TuttiTourney/src/app/show-poule/show-poule.component.scss
+++ b/TuttiTourney/src/app/show-poule/show-poule.component.scss
@@ -5,12 +5,13 @@
   flex-wrap: wrap;
   justify-content: center;
   padding: 50px;
+  border:solid #e09f7d;
   border-radius: 10px;
 }
 
 .poule {
   width: 300px;
-  height: 300px;
+  height: auto;
   background-color: #e09f7d;
   padding-left: 1em;
   border-radius: 25px;
