--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -6,6 +6,6 @@
     <a href="/create-evenement">Créer un événement</a>
     <a href="/create-tournoi">Créer un tournoi</a>
     <a class="member" href="">Connexion</a>
-    <a class="member" href="">Inscription</a>
+    <a href="/create-user">Inscription</a>
   </div>
 </nav>
