--- a/TuttiTourney/src/app/show-evenements/show-evenements.component.html
+++ b/TuttiTourney/src/app/show-evenements/show-evenements.component.html
@@ -1,4 +1,5 @@
-<h1> Liste des évenements : </h1>
+<div class="showUser">Bonjour, utilisateur !</div>
+<h2> Liste des évenements : </h2>
 <div class="container">
   <div class="evenement" *ngFor="let evenement of evenements" (click)="redirection(evenement.nomEvenement)">
     <h2> {{ evenement.nomEvenement }} </h2>
