--- a/TuttiTourney/src/app/show-evenements/show-evenements.component.scss
+++ b/TuttiTourney/src/app/show-evenements/show-evenements.component.scss
@@ -20,6 +20,13 @@
   cursor: pointer;
 }
 
-h1{
+h1, h2{
+  color: white;
+}
+
+.showUser {
+  margin-left: 2%;
+  margin-top: 50px;
+  font-size: 50px;
   color: white;
 }
