--- a/TuttiTourney/src/app/connexion-user/connexion-user.component.html
+++ b/TuttiTourney/src/app/connexion-user/connexion-user.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="connexion-user">
     <form (ngSubmit)="onSubmit()">
-      <p> Pseudonyme : <input type="text" name="pseudo" [(ngModel)]="user.username"></p>
-      <p> Mot de Passe : <input type="password" name="mdp" [(ngModel)]="user.password"></p>
+      <p> Pseudonyme : <input type="text" name="pseudo" [(ngModel)]="form.username"></p>
+      <p> Mot de Passe : <input type="password" name="mdp" [(ngModel)]="form.password"></p>
 
       <input type="submit" value="Se connecter">
     </form>
