--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -2,10 +2,16 @@
   <div class="right">
     <a class="home" href="">TUTTI TOURNEY</a>
   </div>
-  <div class="left">
+
+  <div class="left" *ngIf="isLoggedIn; else loggedOut">
     <a href="/create-evenement">Créer un événement</a>
     <a href="/create-tournoi">Créer un tournoi</a>
-    <a href="/connexion-user">Connexion</a>
-    <a href="/create-user">Inscription</a>
+    Bonjour, {{ username }} !
+    <a href="deco"(click)="logout()">Déconnexion</a>
   </div>
+  <ng-template #loggedOut>
+    <div class="left">
+    <a href="/connexion-user">Connexion</a>
+    <a href="/create-user">Inscription</a></div>
+  </ng-template>
 </nav>
