--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <a class="home" href="">TUTTI TOURNEY</a>
   </div>
   <div class="left">
+    <a href="/mes-tournois"> Mes tournois </a>
     <a href="/create-evenement">Créer un événement</a>
     <a href="/create-tournoi">Créer un tournoi</a>
     <a class="member" href="">Connexion</a>
