--- a/TuttiTourney/src/app/show-poule/show-poule.component.html
+++ b/TuttiTourney/src/app/show-poule/show-poule.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="poules">
 
 
-  <button (click)="genererMatch(poules)" *ngIf= "poules[0].equipes!.length!=0"> Les poules me conviennent </button>
+  <button  (click)="genererMatch(poules)" *ngIf= "poules[0].equipes!.length!=0 && isLoggedIn"> Les poules me conviennent </button>
 
 <div class="container">
 
@@ -15,7 +15,7 @@
       </ng-container>
 
     </ul>
-      <button (click)="attributionPoule(equipes, poules)"> Attribuer les équipes </button>
+      <button *ngIf="isLoggedIn" (click)="attributionPoule(equipes, poules)"> Attribuer les équipes </button>
 
   </div>
 
