update des scores dans mongo

--- a/TuttiTourney/src/app/gerer-tournoi/gerer-tournoi.component.html
+++ b/TuttiTourney/src/app/gerer-tournoi/gerer-tournoi.component.html
@@ -4,10 +4,10 @@
     <div class="poule">
       <p> Poule numéro : {{poule.numeroPoule}}</p>
       <p> Matchs : </p>
-      <ng-container *ngFor="let match of poule.matchs">
+      <ng-container *ngFor="let match of matchs[poule.numeroPoule || 0]">
         <p> {{match.nomEquipe1 }} contre {{match.nomEquipe2}} : {{match.scoreEquipe1}} - {{ match.scoreEquipe2 }}
-          <button *ngIf="isLoggedIn" (click)="incrScore1(match)"> +1 pour équipe 1 </button>
-          <button *ngIf="isLoggedIn" (click)="incrScore2(match)"> +1 pour équipe 2</button>
+          <button *ngIf="isLoggedIn" (click)="incrScore1(match, nomEvenement, nomTournoi, lastTour, poule.numeroPoule)"> +1 pour équipe 1 </button>
+          <button *ngIf="isLoggedIn" (click)="incrScore2(match, nomEvenement, nomTournoi, lastTour, poule.numeroPoule)"> +1 pour équipe 2</button>
           <button *ngIf="isLoggedIn" (click)="addVainqueur(match)"> Match terminé </button>
         </p>
         <p *ngIf= "match.vainqueur != undefined"> Le vainqueur est : {{match.vainqueur}} </p>
