ajout page d'observation + liaison tournoi a orga

--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav>
   <div class="right">
     <a class="home" href="">TUTTI TOURNEY</a>
+    <a href="/tournois-finis"> Tournois terminées </a>
+    <a href="/tournois-en-cours"> Tournois en cours </a>
   </div>
 
   <div class="left" *ngIf="isLoggedIn; else loggedOut">
