--- a/TuttiTourney/src/app/mes-tournois/mes-tournois.component.html
+++ b/TuttiTourney/src/app/mes-tournois/mes-tournois.component.html
@@ -4,7 +4,7 @@
 <h1> Tournoi dans l'evenement : {{evenement.nomEvenement}} </h1>
 <div class="container_tournoi">
   <ng-container *ngFor="let tournoi of evenement.tournois">
-    <div class="tournoi" *ngIf="tournoi.etat==1">
+    <div class="tournoi" *ngIf="tournoi.etat==1 && tournoi.organisateur==id ">
       <h2> {{ tournoi.nomTournoi }} </h2>
       <h3> {{ tournoi.sport }} </h3>
       <p> {{ tournoi.description }} </p>
