--- a/TuttiTourney/src/app/tournois-finis/tournois-finis.component.html
+++ b/TuttiTourney/src/app/tournois-finis/tournois-finis.component.html
@@ -2,12 +2,12 @@
 
 <div class="container_event">
     <ng-container *ngFor="let evenement of evenements">
-    <h1> Tournoi dans l'evenement : {{evenement.nomEvenement}} </h1>
     <div class="container_tournoi">
       <ng-container *ngFor="let tournoi of evenement.tournois">
         <div class="tournoi" *ngIf="tournoi.etat==2 ">
-          <h2> {{ tournoi.nomTournoi }} </h2>
-          <h3> {{ tournoi.sport }} </h3>
+          <p> Tournoi de l'evenement :<b> {{evenement.nomEvenement}} </b></p>
+          <p> Nom du tournoi:<b> {{ tournoi.nomTournoi }} </b></p>
+          <p> Sport:<b> {{ tournoi.sport }}</b> </p>
           <p> {{ tournoi.description }} </p>
     
           <button (click)="redirectionTournoiFini(evenement.nomEvenement, tournoi.nomTournoi)"> Voir les résultats </button>
