Change css on navbar

--- a/TuttiTourney/src/app/app.component.scss
+++ b/TuttiTourney/src/app/app.component.scss
@@ -6,19 +6,21 @@ body {
   font-size: 1rem;
 }
 
-body{
+body {
   width: 100vw;
   min-height: 100vh;
-  background-color: #2B2E4A;
+  background-color: #393E46;
 }
 
 h1 {
   margin-left: 1rem;
   font-size: 3rem;
 }
+
 h3 {
   font-size: 2rem;
 }
+
 p {
   font-family: "Tenor Sans", sans-serif;
   font-size: 1rem;
