--- a/TuttiTourney/src/app/navbar/navbar.component.scss
+++ b/TuttiTourney/src/app/navbar/navbar.component.scss
@@ -1,28 +1,56 @@
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: #903745;
+  background-color: #00ADB5;
   margin: 0;
   box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.25);
 }
 
 nav, a{
-  padding: 1.2em;
-  text-align: left;
+  text-align: center;
   color: #f2f2f2;
   text-decoration: none;
 }
 
-a:hover{
-  background-color: #7e303c;
-  padding: 1em;
+a {
+  position: relative;
+  margin-left: 12px;
+  margin-right: 1.2em;
+}
+
+a:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: -0.2em;
+  left: 0;
+  background-color: #FFF;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+a:hover:before {
+  visibility: visible;
+  width: 100%;
 }
 
 a.home{
   font-size: 1.2em;
 }
 
-.left{
+.left {
   //pour centrer la partie gauche
   margin-top: 2px;
+  padding: 1.2em;
+}
+
+.right {
+  //pour centrer la partie droite
+  margin-top: 2px;
+  padding: 1.2em;
+}
+
+.right a {
+  margin-left: 0;
 }
