--- a/TuttiTourney/src/app/create-evenement/create-evenement.component.scss
+++ b/TuttiTourney/src/app/create-evenement/create-evenement.component.scss
@@ -8,7 +8,7 @@
   margin-top: 10em;
   width: 460px;
   height: 300px;
-  background-color: #e09f7d;
+  background-color: #222831;
   padding-left: 1em;
   border-radius: 25px;
   overflow: hidden;
