--- a/TuttiTourney/src/app/create-tournoi/create-tournoi.component.scss
+++ b/TuttiTourney/src/app/create-tournoi/create-tournoi.component.scss
@@ -4,11 +4,11 @@
   align-items: center;
 }
 
-.create-tournoi{
+.create-tournoi {
   margin-top: 10em;
   width: 460px;
   height: 300px;
-  background-color: #e09f7d;
+  background-color: #222831;
   padding-left: 1em;
   border-radius: 25px;
   overflow: hidden;
