--- a/TuttiTourney/src/app/show-evenements/show-evenements.component.scss
+++ b/TuttiTourney/src/app/show-evenements/show-evenements.component.scss
@@ -11,7 +11,7 @@
 .evenement {
   width: 300px;
   height: 300px;
-  background-color: #e09f7d;
+  background-color: #222831;
   padding-left: 1em;
   border-radius: 25px;
   margin: 20px;
