--- a/TuttiTourney/src/app/organisation-tournoi/organisation-tournoi.component.html
+++ b/TuttiTourney/src/app/organisation-tournoi/organisation-tournoi.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="tournoi">
-    <h2> {{ tournoi.nomTournoi }} </h2>
-    <h3> {{ tournoi.sport }} </h3>
+    <h2> Tournoi : {{ tournoi.nomTournoi }} </h2>
+    <h3> Sport : {{ tournoi.sport }} </h3>
     <p> {{ tournoi.description }} </p>
     <p *ngIf= "tournoi.etat==0"> Le tournoi n'a pas commencé </p>
     <p *ngIf= "tournoi.etat==1"> Le tournoi a commencé</p>
@@ -10,9 +10,11 @@
   </div>
   <div *ngIf="isLoggedIn" class="poules">
     <form (ngSubmit)="onSubmit()">
-      <p> Il y a {{tournoi.equipes?.length}} equipes inscritent au tournoi.</p>
-      <p> Combien voulez-vous de poules ? <input type="number" name="nombrePoule" [(ngModel)]="nombrePoule"></p>
-      <input type="submit" value="Envoyez">
+      <p> Il y a {{ nbrEquipes }} equipes inscritent au tournoi.</p>
+      <p *ngIf="nbrEquipes <= 1"> Vous <b>ne pouvez pas</b> créer de poules, il faut 2 équipes inscritent au tournoi minimum. </p>
+      <p *ngIf="nbrEquipes > 1"> Indiquez le nombre de poules souhaités : <input type="number" name="nombrePoule" [(ngModel)]="nombrePoule">
+        <input type="submit" value="Envoyez">
+      </p>
      </form>
   </div>
 </div>
