--- a/TuttiTourney/src/app/create-tournoi/create-tournoi.component.html
+++ b/TuttiTourney/src/app/create-tournoi/create-tournoi.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="create-tournoi">
+    <h2> Création de votre tournoi </h2>
      <form (ngSubmit)="onSubmit()">
       <p>
         Nom de l'evenement :
