--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -1,6 +1,10 @@
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Istok+Web&family=Noto+Sans&display=swap');
+</style>
+
 <nav>
   <div class="left">
-    <a class="home" href="">TUTTI TOURNEY</a>
+    <b><a class="home" href="">TUTTI TOURNEY</a></b>
     <a href="/tournois-finis"> Tournois terminées </a>
     <a href="/tournois-en-cours"> Tournois en cours </a>
   </div>
