--- a/TuttiTourney/src/app/navbar/navbar.component.scss
+++ b/TuttiTourney/src/app/navbar/navbar.component.scss
@@ -35,8 +35,9 @@ a:hover:before {
   width: 100%;
 }
 
-a.home{
+a.home {
   font-size: 1.2em;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .left {
