--- a/TuttiTourney/src/app/organisation-tournoi/organisation-tournoi.component.scss
+++ b/TuttiTourney/src/app/organisation-tournoi/organisation-tournoi.component.scss
@@ -6,12 +6,13 @@
   justify-content: center;
   padding: 50px;
   border-radius: 10px;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .tournoi {
   width: 300px;
   height: 300px;
-  background-color: #e09f7d;
+  background-color: #222831;
   padding-left: 1em;
   border-radius: 25px;
   margin: 20px;
@@ -22,7 +23,7 @@
 .poules {
   width: 300px;
   height: 300px;
-  background-color: #e09f7d;
+  background-color: #222831;
   padding-left: 1em;
   border-radius: 25px;
   margin: 20px;
