--- a/TuttiTourney/src/app/create-equipe/create-equipe.component.html
+++ b/TuttiTourney/src/app/create-equipe/create-equipe.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="create-equipe">
+    <h2> Ajouter votre équipe </h2>
      <form (ngSubmit)="onSubmit()">
-
       <p> Nom de l'équipe : <input type="text" name="nomEquipe" [(ngModel)]="newEquipe.nomEquipe"></p>
       <p> Nombre de joueur dans l'équipe : <input type="number" name="nbjoueur" [(ngModel)]="newEquipe.nbjoueur"></p>
       <p> Niveau (de 1 (Pro) à 10 (Debutant)) : <input type="number" name="niveau" [(ngModel)]="newEquipe.niveau"></p>
