--- a/TuttiTourney/src/app/create-equipe/create-equipe.component.scss
+++ b/TuttiTourney/src/app/create-equipe/create-equipe.component.scss
@@ -1,15 +1,29 @@
-.container{
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Noto Sans', sans-serif;
 }
 
-.create-equipe{
+.create-equipe {
   margin-top: 10em;
-  width: 460px;
-  height: 300px;
-  background-color: #e09f7d;
-  padding-left: 1em;
+  width: 500px;
+  height: 500px;
+  background-color: #222831;
   border-radius: 25px;
   overflow: hidden;
+  text-align: center;
+}
+
+.create-equipe form {
+  margin-top: 20%;
+}
+
+input[type=submit] {
+  margin-top: 5%;
+  cursor: pointer;
+}
+
+h2 {
+  margin-top: 15%;
 }
