--- a/TuttiTourney/src/app/create-tournoi/create-tournoi.component.scss
+++ b/TuttiTourney/src/app/create-tournoi/create-tournoi.component.scss
@@ -1,15 +1,29 @@
-.container{
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .create-tournoi {
   margin-top: 10em;
-  width: 460px;
-  height: 300px;
+  width: 450px;
+  height: 450px;
   background-color: #222831;
-  padding-left: 1em;
   border-radius: 25px;
   overflow: hidden;
+  text-align: center;
+}
+
+.create-tournoi form {
+  margin-top: 20%;
+}
+
+input[type=submit] {
+  margin-top: 5%;
+  cursor: pointer;
+}
+
+h2 {
+  margin-top: 15%;
 }
