--- a/TuttiTourney/src/app/create-user/create-user.component.html
+++ b/TuttiTourney/src/app/create-user/create-user.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="create-user">
+    <h2> Inscription </h2>
     <form (ngSubmit)="onSubmit()">
       <p> Pseudonyme : <input type="text" name="pseudo" [(ngModel)]="form.username"></p>
       <p> Mot de Passe : <input type="password" name="mdp" [(ngModel)]="form.password"></p>
