--- a/TuttiTourney/src/app/mes-tournois/mes-tournois.component.scss
+++ b/TuttiTourney/src/app/mes-tournois/mes-tournois.component.scss
@@ -6,23 +6,32 @@
   justify-content: center;
   padding: 50px;
   border-radius: 10px;
+  text-align: center;
+  font-family: 'Noto Sans', sans-serif;
 }
 .container_evenement {
   border: black solid;
 }
 
 .tournoi {
-  width: 300px;
-  height: 300px;
-  background-color: #e09f7d;
+  width: 400px;
+  height: 400px;
+  background-color: #222831;
   padding-left: 1em;
   border-radius: 25px;
   margin: 20px;
   // margin-top: 3em;
   overflow: hidden;
-  cursor: pointer;
 }
 
 h1{
   color: white;
+}
+
+h2{
+    margin-top: 15%;
+}
+
+p{
+    margin-top: 20%;
 }
