--- a/TuttiTourney/src/app/show-evenements/show-evenements.component.html
+++ b/TuttiTourney/src/app/show-evenements/show-evenements.component.html
@@ -1,3 +1,6 @@
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+</style>
 <h1> Liste des évenements : </h1>
 <div class="container">
   <div class="evenement" *ngFor="let evenement of evenements" (click)="redirection(evenement.nomEvenement)">
