--- a/TuttiTourney/src/app/show-evenements/show-evenements.component.scss
+++ b/TuttiTourney/src/app/show-evenements/show-evenements.component.scss
@@ -12,14 +12,18 @@
   width: 300px;
   height: 300px;
   background-color: #222831;
-  padding-left: 1em;
   border-radius: 25px;
-  margin: 20px;
   // margin-top: 3em;
   overflow: hidden;
   cursor: pointer;
+  text-align: center;
 }
 
 h1{
   color: white;
+  // margin-top: 3em;
+}
+
+h2 {
+  margin-top: 20%;
 }
