--- a/TuttiTourney/src/app/show-tournoi/show-tournoi.component.scss
+++ b/TuttiTourney/src/app/show-tournoi/show-tournoi.component.scss
@@ -11,15 +11,24 @@
 .tournoi {
   width: 300px;
   height: 300px;
-  background-color: #e09f7d;
-  padding-left: 1em;
+  background-color: #222831;
   border-radius: 25px;
-  margin: 20px;
   // margin-top: 3em;
   overflow: hidden;
   cursor: pointer;
+  text-align: center;
 }
 
-h1{
+button
+{
+    margin-top: 15%;
+}
+
+h1 {
   color: white;
+  // margin-top: 3em;
+}
+
+h2 {
+  margin-top: 20%;
 }
