--- a/TuttiTourney/src/styles.scss
+++ b/TuttiTourney/src/styles.scss
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Tenor Sans", sans-serif;
+  font-family: 'ABeeZee', "Tenor Sans", sans-serif;
   font-size: 1rem;
   width: 100vw;
   min-height: 100vh;
@@ -19,12 +19,13 @@ input[type=text], input[type=number], input[type=date], input[type=password], in
   border-style: none;
 }
 
-input[type=submit] {
+input[type=submit], button {
   border-radius: 25px;
   height: 30px;
   padding: 5px;
   border-style: none;
   font-size: 10px;
+  cursor: pointer;
 }
 
 select {
@@ -36,4 +37,16 @@ select {
 
 h1, h2, h3, p {
   color: white;
+}
+
+h1 {
+  text-align: center;
+  //margin-left: 2em;
+  margin-top: 2.5em;
+  font-size: 4em;
+  font-family: 'Istok Web', sans-serif;
+}
+
+a {
+  font-family: 'Noto Sans', sans-serif;
 }
