Fix global container

--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
     <a href="/mes-tournois"> Mes tournois </a>
     <a href="/create-evenement">Créer un événement</a>
     <a href="/create-tournoi">Créer un tournoi</a>
-    Bonjour, {{ username }} !   
+    <a> Bonjour, {{ username }} ! </a>
     <a href="deco"(click)="logout()">Déconnexion</a>
   </div>
   <ng-template #loggedOut>
@@ -22,3 +22,4 @@
     <a href="/create-user">Inscription</a></div>
   </ng-template>
 </nav>
+
