--- a/TuttiTourney/src/app/show-poule/show-poule.component.html
+++ b/TuttiTourney/src/app/show-poule/show-poule.component.html
@@ -1,35 +1,34 @@
 <ng-container *ngIf="poules">
 
+  <button class="buttonConv" (click)="genererMatch(poules)" *ngIf= "poules[0].equipes && isLoggedIn"> Les poules me conviennent </button>
 
-  <button (click)="genererMatch(poules)" *ngIf= "poules[0].equipes && isLoggedIn"> Les poules me conviennent </button>
+  <div class="container">
 
-<div class="container">
+    <div class="poule" *ngIf= "poules[0].equipes?.length==0">
+      <ul> Liste des équipes dans le tournoi
 
-  <div class="poule" *ngIf= "poules[0].equipes?.length==0">
-    <ul> Liste des équipes dans le tournoi
+        <ng-container *ngFor="let equipe of equipes">
+         <li>
+           {{ equipe.nomEquipe }}
+         </li>
+        </ng-container>
 
-      <ng-container *ngFor="let equipe of equipes">
-       <li>
-         {{ equipe.nomEquipe }}
-       </li>
-      </ng-container>
+      </ul>
+        <button class="buttonAtt" *ngIf="isLoggedIn" (click)="attributionPoule(equipes, poules)"> Attribuer les équipes </button>
 
-    </ul>
-      <button *ngIf="isLoggedIn" (click)="attributionPoule(equipes, poules)"> Attribuer les équipes </button>
+    </div>
+
+    <ng-container *ngFor="let poule of poules">
+
+      <div class="poule" *ngIf="poule.equipes?.length != 0">
+        <h2> Poule numéro : {{poule.numeroPoule}}</h2>
+        <h3> Equipes : </h3>
+        <ng-container *ngFor="let equipe of poule.equipes">
+          <p> {{equipe.nomEquipe}} | niveau : {{equipe.niveau}}</p>
+        </ng-container>
+      </div>
+    </ng-container>
 
   </div>
-
-  <ng-container *ngFor="let poule of poules">
-
-    <div class="poule" *ngIf="poule.equipes?.length != 0">
-      <h2> Poule numéro : {{poule.numeroPoule}}</h2>
-      <h3> Equipes : </h3>
-      <ng-container *ngFor="let equipe of poule.equipes">
-        <p> {{equipe.nomEquipe}} | niveau : {{equipe.niveau}}</p>
-      </ng-container>
-    </div>
-  </ng-container>
-
-</div>
 
 </ng-container>
