--- a/TuttiTourney/src/app/show-poule/show-poule.component.scss
+++ b/TuttiTourney/src/app/show-poule/show-poule.component.scss
@@ -1,23 +1,42 @@
 .container {
   margin: 0 auto;
-  margin-top: 3em;
+  // margin-top: 3em;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding: 50px;
-  border:solid #e09f7d;
-  border-radius: 10px;
+  // border: solid #e09f7d;
+  // border-radius: 10px;
+  align-items: center;
+  font-family: 'Noto Sans', sans-serif;
+  color: white;
 }
 
 .poule {
   width: 300px;
   height: auto;
-  background-color: #e09f7d;
-  padding-left: 1em;
+  // padding-left: 1em;
   border-radius: 25px;
   margin: 20px;
   // margin-top: 3em;
   overflow: hidden;
-  cursor: pointer;
+  background-color: #222831;
+  text-align: center;
 }
 
+ul {
+  margin-top: 15%;
+  margin-bottom: 15%;
+  list-style-type: none;
+  padding: 0;
+}
+
+.buttonAtt
+{
+    margin-bottom: 15%;
+}
+
+.buttonConv {
+  margin-top: 1%;
+  margin-left: 1%;
+}
