--- a/TuttiTourney/src/app/tournois-en-cours/tournois-en-cours.component.scss
+++ b/TuttiTourney/src/app/tournois-en-cours/tournois-en-cours.component.scss
@@ -1,29 +1,35 @@
 .container_tournoi {
-    margin: 0 auto;
-    margin-top: 3em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 50px;
-    border-radius: 10px;
-  }
-  .container_evenement {
-    border: black solid;
-  }
+  margin: 0 auto;
+  margin-top: 3em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 50px;
+  border-radius: 10px;
+  font-family: 'Noto Sans', sans-serif;
+  text-align: center;
+}
+.container_evenement
+{
+  border: black solid;
+}
+
+.tournoi {
+  width: 300px;
+  height: 300px;
+  background-color: #222831;
+  //padding-left: 1em;
+  border-radius: 25px;
+  // margin-top: 3em;
+  overflow: hidden;
+}
   
-  .tournoi {
-    width: 300px;
-    height: 300px;
-    background-color: #e09f7d;
-    padding-left: 1em;
-    border-radius: 25px;
-    margin: 20px;
-    // margin-top: 3em;
-    overflow: hidden;
-    cursor: pointer;
-  }
-  
-  h1{
-    color: white;
-  }
-  
+h1
+{
+  color: white;
+}
+
+button
+{
+  margin-top: 15%;
+}
