--- a/TuttiTourney/src/app/gerer-tournoi/gerer-tournoi.component.scss
+++ b/TuttiTourney/src/app/gerer-tournoi/gerer-tournoi.component.scss
@@ -5,17 +5,21 @@
   flex-wrap: wrap;
   justify-content: center;
   padding: 50px;
-  border:solid #e09f7d;
-  border-radius: 10px;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .poule {
   width: 600px;
   height: auto;
-  background-color: #e09f7d;
+  background-color: #222831;
   padding-left: 1em;
   border-radius: 25px;
   margin: 20px;
   // margin-top: 3em;
   overflow: hidden;
+}
+
+button
+{
+    margin: 0 10px;
 }
