--- a/TuttiTourney/src/app/navbar/navbar.component.html
+++ b/TuttiTourney/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
 <nav>
   <div class="left">
     <b><a class="home" href="">TUTTI TOURNEY</a></b>
-    <a href="/tournois-finis"> Tournois terminées </a>
+    <a href="/tournois-finis"> Tournois terminés </a>
     <a href="/tournois-en-cours"> Tournois en cours </a>
   </div>
 
